Add Spring animations to CalculatorViewController

--- a/NovoMixPasseportSwift/ResultView.xib
+++ b/NovoMixPasseportSwift/ResultView.xib
@@ -22,7 +22,7 @@
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="SpringView" customModule="NovoMixPasseportSwift" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="319" height="529"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
